# ski-clock-neo

./: .gitignore  README.md  certificates.h  ota_update.h  pyproject.toml  replit.md  scale_smooth.h  ski-clock-neo.ino  wifi_config.h
attached_assets/: Pasted--19-15-55-426-19-15-55-426-Ski-Clock-Neo-Starti-1764181364890_1764181364891.txt  Pasted--Copyright-2023-Espressif-Systems-Shanghai-PTE-LTD-Licensed-under-the-Apache-License-Vers-1763578707376_1763578707377.txt  Pasted--Direct-port-manipulation-for-fast-GPIO-operations-in-interrupt-context-if-defined-ESP8266-in-1764182807667_1764182807667.txt  Pasted--if-defined-ESP32-ESP32-Use-FreeRTOS-task-for-guaranteed-timing-even-during-network-operation-1764018198565_1764018198565.txt  Pasted--ifndef-LED-INDICATOR-H-define-LED-INDICATOR-H-if-defined-ESP32-include-WiFi-h-elif-define-1764177015869_1764177015870.txt  Pasted-0-02-09-519-00-02-09-519-Ski-Clock-Neo-Starting-1764803_1764803005291.txt  Pasted-08-00-13-813-08-00-13-813-Ski-Clock-Neo-Startin-1764831_1764831653304.txt  Pasted-14-28-55-942-Rebooting-14-28-55-942-ESP-ROM-esp32c3-api1-20210207-14-28-55-942-Build-F-1764163823163_1764163823164.txt  Pasted-15-23-05-225-Rebooting-15-23-05-225-ESP-ROM-esp32c3-api1-20210207-15-23-05-225-Build-F-1764167031358_1764167031358.txt  Pasted-15-30-48-943-Rebooting-15-30-48-943-ESP-ROM-esp32c3-api1-20210207-15-30-48-943-Build-Feb-1764167538556_1764167538557.txt  Pasted-16-23-15-079-ESP-ROM-esp32c3-api1-20210207-16-23-15-079-Build-Feb-7-2021-16-23-15-079-rs-1764170694136_1764170694136.txt  (+49 more)
dashboard/: .gitignore  README.md  app.py  (+3 more)
(+177 files in other folders)
