[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "paho-mqtt>=2.1.0",
    "psycopg2-binary>=2.9.11",
    "replit-object-storage>=1.0.2",
    "werkzeug>=3.1.3",
]
